# jobradar-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evalset/: 01_go_senior.json  02_no_sponsor.json  03_remote_unknown.json
examples/: sources.json
src/jobradar/: __init__.py  cache.py  cli.py  config.py  cost.py  embeddings.py  eval.py  export.py  fetch.py  index.py  models.py  rank.py  sources.py  store.py  visa.py
src/jobradar/api/: __init__.py  app.py  deps.py  runs.py  schemas.py
src/jobradar/api/templates/: _matches.html  dashboard.html
src/jobradar/extract/: __init__.py  extractor.py  parse.py  prompt.py
src/jobradar/graph/: __init__.py  pipeline.py  state.py
src/jobradar/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_eval.py  test_extractor.py  test_index.py  test_models.py  test_parse.py  test_pipeline.py  test_rank.py  test_visa.py
tests/fixtures/: sample_job.html
